infra/k8s/bar-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar
          image: taman9333/bar
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  type: ClusterIP
  selector:
    app: bar
  ports:
    - name: bar
      protocol: TCP
      port: 3000
      targetPort: 3000
