infra/k8s/xyz-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xyz-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xyz
  template:
    metadata:
      labels:
        app: xyz
    spec:
      containers:
        - name: xyz
          image: taman9333/xyz
---
apiVersion: v1
kind: Service
metadata:
  name: xyz-svc
spec:
  type: ClusterIP
  selector:
    app: xyz
  ports:
    - name: xyz
      protocol: TCP
      port: 3000
      targetPort: 3000
