infra/k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: website-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website-virtual-service
spec:
  hosts:
    - '*'
  gateways:
    - website-gateway
  http:
    - route:
      - destination:
          host: foo-svc
          port:
            number: 3000
# different way if we have many services
    # - match:
    #     - uri:
    #         regex: /?(.*)
    #   route:
    #     - destination:
    #         port:
    #           number: 3000
    #         host: foo-svc
